Fixed reminders displaying next to each other with no gap in between

--- a/src/assets/sass/components/_reminder.sass
+++ b/src/assets/sass/components/_reminder.sass
@@ -3,14 +3,9 @@
   cursor: pointer
   display: flex
   font-size: 12px
+  margin-bottom: 2px
   padding: 0 4px
   position: relative
-
-  &__dot
-    font-size: 6px
-    line-height: 6px
-    padding-right: 4px
-    padding-top: 3px
 
   &__time
     font-size: 11px
@@ -30,7 +25,6 @@
     border-radius: 3px
     bottom: 0
     left: 0
-    //opacity: 0.1
     position: absolute
     right: 0
     top: 0
